docs(images): add images resources for README.md